# wanshi

./: .dockerignore  .gitignore  PROJECT_STATE.md  README.md  ROADMAP.md  TECHDEBT.md  TODO.md  package-lock.json  package.json  test.ts  tsconfig.json  ttt2.ts
.claude/: CLAUDE.md
.github/workflows/: bench-image.yml  dist-tag.yml  publish.yml
audio-pipeline/: .env.example  README.md  pyproject.toml
audio-pipeline/audio_pipeline/: __init__.py  _worker.py  audio.py  chunker.py  cli.py  config.py  diarize.py  pipeline.py  stitcher.py  vad.py
audio-pipeline/audio_pipeline/asr/: __init__.py  parakeet.py  types.py  whisper.py
audio-pipeline/tests/: test_merge.py
bench/: Dockerfile  RUNPOD.md  entrypoint.sh
docs/: AUDIT_FIX_REPORT.md  MIGRATION.md  PROJECT_STATE.md  README.md  ROADMAP.md
docs/archive/: AUDIT_REPORT.md  AUDIT_REPORT_2.md  ROADMAP-phase10-release.md  ROADMAP-phases-1-10.md
docs/benchmark/: SCORING.md
docs/inbox/: README.md  (+24 more)
frontend/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
scripts/: bench-run.sh  benchmark.ts  fetch-mine.ts  fetch-semeval.ts  gold-compare.ts  pack-corpora.sh  realign-mine.ts  report.py  targeted-run.sh
src/: Logger.ts  index.ts  knowledge_search.ts  mergeKnowledgeGraphs.ts  processDirectory.ts  system_prompt_template_v2.ts  types.ts  user_prompt_template.ts
test/: CompositeScore.ts  ConsistencyMetrics.ts  FactualMetrics.ts  SemanticMetrics.ts  StructuralMetrics.ts  index.ts  test.ts
website/: .gitignore  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
(+427 files in other folders)
