[project]
name = "audio-pipeline"
version = "0.1.0"
description = "kg-gen dual ASR engine: Silero VAD + pyannote diarization + Parakeet/Whisper dual-STT → recua turns JSON. Vendored & slimmed from transcript-ua (MLX / Apple Silicon)."
requires-python = ">=3.12"
readme = "README.md"
authors = [
    { name = "Oleksii Kruhlyk", email = "alex.love.broadcast@gmail.com" },
]
dependencies = [
    # transcription stack (MLX / Apple Silicon only)
    "parakeet-mlx",
    "mlx-whisper",
    "silero-vad",
    "pyannote.audio",
    "soundfile",
    "numpy",
    # .env loading (HF_TOKEN for pyannote's gated diarization model)
    "python-dotenv",
]

[project.scripts]
audio-pipeline = "audio_pipeline.cli:main"

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_pipeline"]
